@@ -3,11 +3,4 @@ ugentopoly - project objprog
 
 
 # windows
-> download the "libraries" folder and the "ugentopoly.jar"
-
-
-> open "command prompt" and type the following:
-
-> java -p "C:\[...]\libraries" --add-modules ALL-MODULE-PATH -cp "C:\[...]\ugentopoly.jar" be.ugent.objprog.ugentopoly.Ugentopoly
-
-> but replace the [...] with your own folders
+- in the "ugentopoly_nvs" folder there's a file called "ugentopoly.cmd", double click it to run the game
